<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorkshopContactApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblFirstName">First Name</string>
    <string name="lblLastName">Last Name</string>
    <string name="lblPhone">Phone</string>
    <string name="lblEMail">E-Mail</string>
    <string name="ContactManager">Contact Manager</string>
    <string name="Save">Save</string>
</resources>