<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/ContactManager"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/TextSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="16dp"
        android:text="@string/lblFirstName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/TextSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:text="@string/lblLastName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/TextSize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="16dp"
        android:text="@string/lblPhone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/TextSize" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:text="@string/lblEMail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/TextSize" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textView2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:layout_toRightOf="@id/textView2"
        android:ems="10"
        android:hint="given name"
        android:textSize="@dimen/TextSize" >

        <requestFocus android:layout_width="match_parent" />

    </EditText>

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/editFirstName"
        android:layout_toRightOf="@id/textView3"
        android:ems="10"
        android:textSize="@dimen/TextSize" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/editLastName"
        android:layout_toRightOf="@id/textView4"
        android:ems="10"
        android:textSize="@dimen/TextSize" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignRight="@+id/editPhone"
        android:layout_toRightOf="@id/textView5"
        android:ems="10"
        android:textSize="@dimen/TextSize" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/Save"
        android:onClick="onSaveClick"
        android:textSize="@dimen/TextSize" />
    
    <ListView
        android:id="@+id/listc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:dividerHeight="1px"
        />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSave"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignRight="@+id/editEmail"
        android:text="Delete"
        android:onClick="onDeleteClick"
        android:textSize="@dimen/TextSize" />
    
</RelativeLayout>